--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,13 +1,22 @@
 <!-- <h1>Make your form here</h1> -->
-<form action="/pirates" method="POST">
-  <label for="pirate_name">Pirate's Name: <input type="text" name="pirate[name]"></label><br>
-  <label for="pirate_weight">Pirate's Weight: <input type="text" name="pirate[weight]"></label><br>
-  <label for="pirate_height">Pirate's Height: <input type="text" name="pirate[height]"></label><br>
-  <label for="ship_name">Pirate's Ship Name: <input id="ship_name_1" input type="text" name="pirate[ships][][name]"></label><br>
-  <label for="ship_type">Pirate's Ship Type: <input id="ship_type_1" input type ="text" name="pirate[ships][][type]"></label><br>
-  <label for="ship_booty">Pirate's Ship Booty: <input id="ship_booty_1" input type="text" name="pirate[ships][][booty]"></label><br>
-  <label for="ship_name">Pirate's Ship Name: <input id="ship_name_2" input type="text" name="pirate[ships][][name]"></label><br>
-  <label for="ship_type">Pirate's Ship Type: <input id="ship_type_2" input type="text" name="pirate[ships][][type]"></label><br>
-  <label for="ship_booty">Pirate's Ship Booty: <input id="ship_booty_2" input type="text" name="pirate[ships][][booty]"></label><br>
-  <button type="submit" value="submit">Submit</button>
-</form>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>title</title>
+  </head>
+  <body>
+    <h1>Please enter your info below:</h1>
+    <form action="/pirates" method="post">
+      <p>Pirate Name: <input type="text" name="pirate[name]"></p>
+      <p>Pirate Weight: <input type="text" name="pirate[weight]"></p>
+      <p>Pirate Height: <input type="text" name="pirate[height]"></p>
+      <p>Pirate Ship 1 Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]"></p>
+      <p>Pirate Ship 1 Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]"></p>
+      <p>Pirate Ship 1 Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"></p>
+      <p>Pirate Ship 2 Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]"></p>
+      <p>Pirate Ship 2 Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]"></p>
+      <p>Pirate Ship 2 Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"></p>
+      <p><input type="submit" id="submit" value="Submit"></p>
+    </form>
+  </body>
+</html>
