--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -9,3 +9,6 @@
 <h2>Ship 1 booty: <%=@ships[0].booty%></h2>
 
 <!-- <h2>Display your second ship here</h2> -->
+<h2>Ship 2 name: <%=@ships[1].name%></h2>
+<h2>Ship 2 type: <%=@ships[1].type%></h2>
+<h2>Ship 2 booty: <%=@ships[1].booty%></h2>
